修正songList接收props的错误。

--- a/LifeLine/Pages/Music/Index.cshtml
+++ b/LifeLine/Pages/Music/Index.cshtml
@@ -9,5 +9,9 @@
     <script src="/dist/music.bundle.js" asp-append-version="true"></script>
 }
 
+@section Styles{
+<link rel="stylesheet" href="/dist/bundle.css">
+}
+
 
 
