--- a/LifeLine/Pages/Article/Index.cshtml
+++ b/LifeLine/Pages/Article/Index.cshtml
@@ -7,7 +7,8 @@
 
 @section Scripts{
     <script src="/dist/article.bundle.js" asp-append-version="true"></script>
+    <script src="~/js/prism.js" asp-append-version="true"></script>
 }
 @section Styles{
-    <link href="~/dist/bundle.css" rel="stylesheet"  asp-append-version="true" />
+    <link href="~/dist/bundle.css" rel="stylesheet" asp-append-version="true" />
 }
