--- a/LifeLine/Pages/Article/Edit.cshtml
+++ b/LifeLine/Pages/Article/Edit.cshtml
@@ -12,12 +12,7 @@
     <environment include="Production">
         <script src="~/lib/tinymce/tinymce.min.js"></script>
     </environment>
-    <script>
-        tinymce.init({
-            selector: "textarea",
-            height: 500,
-        })
-    </script>
+    <script src="~/js/loadEditor.js"></script>
 }
 
 <form method="post" class="col-lg-8">
