上传图片，点击打开文章

--- a/LifeLine/Pages/Index.cshtml
+++ b/LifeLine/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 <div>
     <h3>TODO list</h3>
     <ol>
-        <li>记录文件夹默认添加不了</li>
         <li>分页控件不刷新</li>
+        <li>图片上传</li>
     </ol>
 </div>
