let bootstrap collapse.js work.

--- a/LifeLine/Pages/_Layout.cshtml
+++ b/LifeLine/Pages/_Layout.cshtml
@@ -65,6 +65,7 @@
     else if (useVendorScript == true)
     {
         <script src="~/dist/vendor.js" asp-append-version="true"></script>
+        <script src="~/dist/site.bundle.js" asp-append-version="true"></script>
     }
     @RenderSection("Scripts", required: false)
 </body>
